add up to date dockstore.yml file

--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -1,3 +1,7 @@
   - name: variant-interpretation
     subclass: WDL
     primaryDescriptorPath: /wdl/Relatedness.wdl
+
+  - name: variant-interpretation
+    subclass: WDL
+    primaryDescriptorPath: /wdl/RunDeNovoSVs.wdl
