added DeNovoSVScatter.wdl to yml file

--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -5,3 +5,7 @@
   - name: variant-interpretation
     subclass: WDL
     primaryDescriptorPath: /wdl/RunDeNovoSVs.wdl
+
+  - name: variant-interpretation
+    subclass: WDL
+    primaryDescriptorPath: /wdl/DeNovoSVsScatter.wdl
